--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,5 +5,6 @@
   <span>My App</span>
   <span class="example-spacer"></span>
   <a href="">Login/registe</a>
-  <a href="">Admin</a>
+  <a routerLink="/admin">Admin</a>
 </mat-toolbar>
+<router-outlet></router-outlet>
