--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -4,7 +4,7 @@
   </button>
   <span>My App</span>
   <span class="example-spacer"></span>
-  <a href="">Login/registe</a>
+  <a href="/login">Login/registe</a>
   <a routerLink="/admin">Admin</a>
 </mat-toolbar>
 <router-outlet></router-outlet>
